tests/core/error/function-6.rq
# Use unknown function in our custom function namespaces
SELECT (tracker:asdfqwertyuiop(false) AS ?u) { }
